<?xml version="1.0" encoding="utf-8"?>
<fragment
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/master_list_fragment"
    android:name="com.example.savior.bakingapp.StepsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StepsDetailsActivity"
    tools:layout="@layout/ingredient_step_fragment" />